#1863 Validar que el valor d'un enumerat a eliminar no estigui usant-se

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -1789,7 +1789,9 @@ expedient.tipus.enumeracio.validacio.codi.repetit=Aquest codi ja existeix
 expedient.tipus.enumeracio.valors.controller.creat=El valor de l'enumeració s'ha creat correctament
 expedient.tipus.enumeracio.valors.controller.modificat=El valor de l'enumeració s'ha modificat correctament
 expedient.tipus.enumeracio.valors.controller.eliminat=El valor de l'enumeració s'ha eliminat correctament
-expedient.tipus.enumeracio.valors.controller.eliminat.us=Hi ha hagut un error eliminant el valor de l'enumeració.
+expedient.tipus.enumeracio.valors.controller.eliminat.us=El valor de l'enumeració s'està utilitzant en algún camp i no es pot esborrar.
+expedient.tipus.enumeracio.valors.controller.eliminat.error=Hi ha hagut un error eliminant el valor de l'enumeració.
+
 
 expedient.tipus.enumeracio.valors.controller.error.obligatori=Aquest camp es obligatori.
 
