#1887 Nova tasca en 2n pla per guardar expedients i documents pendents
d'Arxiu

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
@@ -425,6 +425,7 @@ expedient.monitor.tasques.codi.updatePeticionsAsincronesPinbal=Actualitzar petic
 expedient.monitor.tasques.codi.comprovarEmailAnotacionsNoAgrupats=Enviament de correus no agrupats pendents
 expedient.monitor.tasques.codi.comprovarEmailAnotacionsAgrupats=Enviament periòdic de correus agrupats
 expedient.monitor.tasques.codi.processarAnotacionsAutomatiques=Processar anotacions pendents de processament automàtic
+expedient.monitor.tasques.codi.migrarExpedientsArxiu=Guardar en Arxiu continguts pendents
 expedient.metriques=M&egrave;triques
 
 temps.clau=Clau
