#1898 Afegir l'id del portafirmes al llistat de portasignatures
I separar el processament del document del propi callback

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -3409,6 +3409,7 @@ excepcio.detall.camp.param1=Paràmetre 1
 excepcio.detall.camp.param2=Paràmetre 2
 
 consultes.potafib.titol=Documents enviats a Portafib
+consultes.potafib.camp.documentId=Portafib Id
 consultes.potafib.camp.dataEnviat=Data d'enviament
 consultes.potafib.camp.nomDoc=Document
 consultes.potafib.detall.titol=Detall de l'enviament a Portafib
