Correccions i tancament Helium 3.3.8.5 (2025.07.04 09:00h)
- Evitar error per manca de literal.
- Evitar nullpointer ordenant documents per data.

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -1039,6 +1039,7 @@ expedient.anotacio.llistat.reprocessar.mapeig=Reprocessar mapeig...
 expedient.anotacio.llistat.reprocessar.mapeig.title=Torna a aplicar el mapeig de Sistra2 de l'anotació cap a l'expedient.
 expedient.anotacio.llistat.processar.traspas=Processar traspàs annexos (Arxiu)
 expedient.anotacio.llistat.processar.traspas.title=Torna a intentar moure els annexos entre expedients a l'Arxiu.
+expedient.anotacio.llistat.processar.mapeig=Processar mapeig
 expedient.anotacio.llistat.processar.mapeig.ok=L'anotació s'ha reprocessat correctament.
 expedient.anotacio.llistat.processar.mapeig.ko=No s''ha pogut reprocessar l''anotació: {0}
 expedient.anotacio.llistat.processar.traspas.ko=No s'ha pogut reprocessar els annexos de l'anotació.
