#1857 Poder mostrar la traça de les excepcions que es capturin a Helium

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -2946,6 +2946,9 @@ comu.boto.dissenyar=Dissenyar
 comu.true=Sí
 comu.false=No
 
+comu.copiar.portapapers=Copia la traça al portapapers
+comu.error.mostrartrasa=Mostrar traça
+
 comu.check=&#10003
 
 comuns.georeferencia=Georeferència
