#1863 Validar que el valor d'un enumerat a eliminar no estigui usant-se
- Afegint validació a la importació i modificació del camp

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -1794,6 +1794,8 @@ expedient.tipus.enumeracio.valors.controller.creat=El valor de l'enumeració s'ha
 expedient.tipus.enumeracio.valors.controller.modificat=El valor de l'enumeració s'ha modificat correctament
 expedient.tipus.enumeracio.valors.controller.eliminat=El valor de l'enumeració s'ha eliminat correctament
 expedient.tipus.enumeracio.valors.controller.eliminat.us=El valor de l'enumeració s'està utilitzant en algún camp i no es pot esborrar.
+expedient.tipus.enumeracio.valors.controller.modificar.us=El valor de l'enumeració s'està utilitzant en algún camp i no es pot modificar.
+expedient.tipus.enumeracio.valors.controller.action.us=No es pot realitzar l'acció. Alguns valors de l'enumeració s'utilitzen en algun camp.
 expedient.tipus.enumeracio.valors.controller.eliminat.error=Hi ha hagut un error eliminant el valor de l'enumeració.
 
 
