--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -2030,7 +2030,7 @@ expedient.tipus.metadades.nti.validacio = Errors de validació
 expedient.tipus.metadades.nti.procediment.comu=Procediment comú
 expedient.tipus.metadades.nti.serie.documental.noTrobada=Sèrie documental no trobada a Arxiu
 expedient.tipus.metadades.nti.serie.documental.invalida=Sèrie documental no és correcta i s'hauria de revisar
-expedient.tipus.metadades.nti.procediment.comu.info=Aquest valor no es podrà canviar un cop hi hagi expedients d'aquest tipus d'expedient
+expedient.tipus.metadades.nti.procediment.comu.info=Els rols s'otorgaran per unitat organitzativa. Aquest valor no es podrà canviar un cop hi hagi expedients d'aquest tipus d'expedient
 expedient.tipus.metadades.nti.clasificacion.codi.erroni=Aquest codi de procediment és diferent del de la configuració de metadades NTI i Arxiu: 
 expedient.tipus.metadades.nti.unitat.organitzativa.no.trobada=No s''ha trobat la unitat organitzativa amb codi {0} dins de l''abre d''unitats organitzatives. 
 expedient.tipus.metadades.nti.unitat.organitzativa.no.vigent=La unitat amb codi {0} es troba en l''estat {1}
