#1885 Comprovació prèvia de firma vàlida a l'hora d'adjuntar documents
- Correcions al formulari

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -3567,7 +3567,7 @@ expedient.eines.anular_expedients.motiu.err=El motiu de l'anul·lació és obligato
 expedient.eines.anular_expedients.ok=S&#39;ha programat l&#39;acció d&#39;anul·lar {0} expedient(s)
 
 finalitzar.expedient.titol=Finalitzar l''expedient: {0}
-finalitzar.expedient.info=Aquest expedient conté esborranys. A continuació podeu marcar els esborranys que voleu que se signin en servidor abans de tancar l'expedient per conservar-los a l'Arxiu.
+finalitzar.expedient.info=Aquest expedient conté esborranys. A continuació podeu marcar els esborranys que voleu que se signin en servidor abans de tancar l'expedient per conservar-los a l'Arxiu. Si els documents contenen alguna firma invàlida, aquestes seran eliminades, i es tornarà a firmar el document en servidor.
 finalitzar.expedient.info2=Aquest expedient no conté cap esborrany, es pot finalitzar sense necessitat de cap acció addicional.
 finalitzar.expedient.info3=Aquest expedient no té la integració amb arxiu activada, es pot finalitzar sense necessitat de cap acció addicional.
 finalitzar.expedient.confirm=Estau segur que voleu finalitzar aquest expedient?
