#1893 Afegir cas regla estats obligatori abans d'entrar
- Correcció per a que comprovi correctament dades i documents.
- Corregir literal i amplada de la columna de la regla.

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -787,7 +787,9 @@ expedient.info.estat.avancar=Avançar a l''estat <b>"{0}"</b>
 expedient.info.estat.canviar.correcte=S'ha canviat correctament l'estat a l'expedient
 expedient.info.estat.canviar.error=Hi ha hagut un error canviant l''estat a l''expedient: {0}
 expedient.info.estat.canviar.dades.obligatories=Hi ha {0} dades obligatòries per l''estat actual que no han estat informades: {1}
+expedient.info.estat.canviar.dades.obligatories.entrada=Hi ha {0} dades obligatòries per entrar al proper estat que no han estat informades: {1}
 expedient.info.estat.canviar.documents.obligatoris=Hi ha {0} documents obligatoris per l''estat actual que no han estat informats: {1}
+expedient.info.estat.canviar.documents.obligatoris.entrada=Hi ha {0} documents obligatoris per entrar al proper estat que no han estat informats: {1}
 
 expedient.metadades.nti.titol.nti=Metadades NTI
 expedient.metadades.nti.titol.arxiu=Metadades NTI i informació de l'arxiu
