#1863 Correccions - eliminar valors anteriors, avisar dels que estan en ús, evitar revisar codi si no es canvia.

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -1809,6 +1809,8 @@ expedient.tipus.enumeracio.valors.importar.arxiu.buid=Heu de seleccionar un arxi
 expedient.tipus.enumeracio.valors.importats=Els valor s''han importat correctament.
 expedient.tipus.enumeracio.valors.importats.error=S''ha produït un error durant la importació dels valors: {0}
 expedient.tipus.enumeracio.valors.importats.duplicat=El codi {0} ja existeix o està duplicat en la importació
+expedient.tipus.enumeracio.valors.importar.eliminar.anterior.en.us=No s''han pogut esborrar els següents valors anteriors perquè estan en ús: {0}
+
 
 expedient.tipus.enumeracio.valors.exportats=Els valor s'han exportat correctament.
 expedient.tipus.enumeracio.valors.exportats.error=S''ha produït un error durant l''exportació dels valors: {0}
@@ -1881,6 +1883,7 @@ expedient.tipus.domini.controller.eliminat.no=No s'ha pogut esborrar el domini
 expedient.tipus.domini.controller.eliminat.us=El domini s'està utilitzant com a variable en algún camp i no es pot eborrar.
 
 expedient.tipus.domini.validacio.codi.repetit=Aquest codi ja existeix
+expedient.tipus.domini.validacio.codi.en.us=No es pot modificar el codi perquè està en ús en algún expedient.
 
 # Manteniment de redireccions del tipus d'expedient
 expedient.tipus.redireccio.llistat.columna.usuariOrigen=Usuari origen
