#1925 Previsualitzar els documents en una finestra emergent

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -553,6 +553,7 @@ expedient.document.camp.firma.responsable.nom=Nom del responsable
 expedient.document.camp.firma.responsable.nif=Nif del responsable
 expedient.document.camp.firma.responsable.data=Data de la signatura
 expedient.document.camp.firma.emissor.certificat=Emissor del certificat
+expedient.document.preview=Previsualització del document "{0}"
 
 expedient.document.firmat.esborrar.confirmacio=El document que es vol esborrar està firmat i està arxivat com a document definitiu. Si continua amb l'acció el document s'esborrarà de l'expedient de HELIUM però seguirà emmagatzemat a dins l'arxiu. Estau segur que voleu continuar?
 expedient.document.firmata.invalida=Document amb firma adjunta invalida
