#1918 Afegir una pipella "Signatures" a la gestió de l'expedient per veure les peticions de firma enviades al Portasignatures

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -771,6 +771,7 @@ expedient.info.pipella.documents=Documents
 expedient.info.pipella.interessats=Interessats
 expedient.info.pipella.terminis=Terminis
 expedient.info.pipella.notificacions=Notificacions
+expedient.info.pipella.signatura=Signatura
 expedient.info.pipella.registre=Registre
 expedient.info.pipella.estats=Estats
 expedient.info.pipella.cronograma=Cronograma
