#1896 Afegir un botó al monitor de tasques en 2n pla per reiniciar-les manualment

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -22,6 +22,7 @@ decorator.menu.consultar.notificacions=Notificacions enviades a Notib
 decorator.menu.consultar.documents.enviats.portafib=Documents enviats a Portafib
 decorator.menu.administracio=Administració
 decorator.menu.administracio.tasques.execucio=Tasques en execució
+decorator.menu.administracio.tasques.segonPla=Tasques en segon pla
 decorator.menu.administracio.reindexacions=Reindexacions asíncrones
 decorator.menu.administracio.monitor.integracio=Monitor integracions
 decorator.menu.administracio.monitor.domini=Monitor dominis
@@ -3618,3 +3619,31 @@ usuari.codi.mapeig.info=Afegeix totes les entrades que vulguis emprant el format
 usuari.codi.mapeig.error=s'ha produït un error al modificar el codi de l'usuari
 usuari.codi.mapeig.format.error=El format no és correcte. El format ha de ser 'codiAntic=codiNou', i els codis no poden tenir espais
 usuari.codi.mapeig.processats=registres processats
+
+administracio.tasquesSegonPla.tasca=Tasca
+administracio.tasquesSegonPla.codi.comprovarAnotacionsPendents=Comprovar anotacions pendents
+administracio.tasquesSegonPla.codi.comprovarExecucionsMassives=Comprovar execucions massives
+administracio.tasquesSegonPla.codi.comprovarReindexacioAsincrona=Comprovar reindexació asíncrona
+administracio.tasquesSegonPla.codi.actualitzarUnitatsIProcediments=Actualitzar unitats i procediments
+administracio.tasquesSegonPla.codi.updatePeticionsAsincronesPinbal=Actualitzar peticions asíncrones de Pinbal
+administracio.tasquesSegonPla.codi.comprovarEmailAnotacionsNoAgrupats=Enviament de correus no agrupats pendents
+administracio.tasquesSegonPla.codi.comprovarEmailAnotacionsAgrupats=Enviament periòdic de correus agrupats
+administracio.tasquesSegonPla.codi.processarAnotacionsAutomatiques=Processar anotacions pendents de processament automàtic
+administracio.tasquesSegonPla.codi.migrarExpedientsArxiu=Guardar en Arxiu continguts pendents
+
+administracio.tasquesSegonPla.estat=Estat
+administracio.tasquesSegonPla.estat.EN_EXECUCIO=En execució
+administracio.tasquesSegonPla.estat.EN_ESPERA=En espera
+administracio.tasquesSegonPla.estat.ERROR=Error
+
+administracio.tasquesSegonPla.darrer.inici=Darrer inici
+administracio.tasquesSegonPla.fi.execucio=Fi execució
+administracio.tasquesSegonPla.propera.execucio=Propera execució
+
+administracio.tasquesSegonPla.boto.reiniciar=Reiniciar tasca
+administracio.tasquesSegonPla.boto.refresh.taula=Actualitzar taula
+administracio.tasquesSegonPla.boto.reiniciar.totes=Reiniciar totes
+
+administracio.tasquesSegonPla.reiniciat.ok=S''ha reiniciat correctament la tasca "{0}".
+administracio.tasquesSegonPla.reiniciat.totes=S'han reiniciat correctament totes les tasques.
+administracio.tasquesSegonPla.reiniciat.ko=Error en la petició AJAX reiniciant la tasca.
