#1912 - Error a tipologies per estats, no mostra les notificacions associades a un document

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -965,6 +965,7 @@ expedient.notificacio.ofici_text=Ofici text
 expedient.notificacio.notificacions=Notificacions
 expedient.notificacio.data_enviament=Data enviament
 expedient.notificacio.enviamentTipus=Tip. enviament
+expedient.notificacio.enviamentTipusComplet=Tipus enviament
 expedient.notificacio.data_recepcio=Data recepció
 expedient.notificacio.registre_num=Número registre
 expedient.notificacio.assumpte=Assumpte
