#1901 - Afegir l'opció de filtrar per rol amb permisos al cercador de tipus d'expedients

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -1180,6 +1180,7 @@ expedient.tipus.regla.form.camp.qui.valors=Valors qui
 expedient.tipus.regla.form.camp.que=Que
 expedient.tipus.regla.form.camp.que.valors=Valors que
 expedient.tipus.regla.form.camp.accio=Acció
+expedient.tipus.regla.form.camp.accio.warning=Obligatori que el termini hagi finalitzat.
 
 expedient.tipus.regla.form.titol.nou=Nova regla
 expedient.tipus.regla.form.titol.modificar=Modificar regla
@@ -1280,6 +1281,7 @@ expedient.tipus.cercador.tipologies.codi.sia.nti = Codia SIA (NTI)
 expedient.tipus.cercador.tipologies.codi.sia.notib = Codia SIA (NOTIB)
 expedient.tipus.cercador.tipologies.codi.sia.distribucio = Codia SIA (DISTRIBUCIÓ)
 expedient.tipus.cercador.tipologies.numero.registre.anotacio = Número de registre
+expedient.tipus.cercador.tipologies.rol = Rol
 expedient.tipus.cercador.tipologies.entorn = Entorn
 
 expedient.tipus.taula.estadistica.totalany = Total per any
