#1939 - Afegir informació a la regla de termini obligatori per expedients per estats indicant que es comprovarà que el termini hagi finalitzat

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -1180,7 +1180,7 @@ expedient.tipus.regla.form.camp.qui.valors=Valors qui
 expedient.tipus.regla.form.camp.que=Que
 expedient.tipus.regla.form.camp.que.valors=Valors que
 expedient.tipus.regla.form.camp.accio=Acció
-
+expedient.tipus.regla.form.camp.accio.warning=Obligatori que el termini hagi finalitzat.
 expedient.tipus.regla.form.titol.nou=Nova regla
 expedient.tipus.regla.form.titol.modificar=Modificar regla
 expedient.tipus.estat.controller.regla.creat=Regla creada
