Correccions i tancament Helium 3.3.9.1 (02/10/2025 18:00h)

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -1675,6 +1675,8 @@ expedient.tipus.document.form.camp.portafirmes.motiu.buit=No s'ha informat del m
 expedient.tipus.document.form.camp.portafirmes.fluxos.comuns=Fluxos de firma comuns
 expedient.tipus.document.form.camp.portafirmes.fluxos.usuari=Els meus fluxos
 
+
+fluxosFirma.titol.usuari=Nou flux de firma associats a l'usuari
 fluxosFirma.taula.boto.nou=Nou flux de firma
 fluxosFirma.taula.camp.id=Identificador
 fluxosFirma.taula.camp.nom=Nom
