#1926 - Poder filtrar expedients i les tasques, només els seleccionats

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -470,6 +470,7 @@ expedient.llistat.filtre.camp.tasques=Només amb tasques pendents
 expedient.llistat.filtre.camp.alertes=Només amb alertes
 expedient.llistat.filtre.camp.errors=Només amb errors
 expedient.llistat.filtre.camp.errors.arxiu=Només amb errors d'Arxiu
+expedient.llistat.filtre.camp.seleccio=Només selecció
 expedient.llistat.filtre.camp.anulats=Mostra anul·lats
 expedient.llistat.filtre.camp.personals=Només amb tasques personals
 expedient.llistat.filtre.camp.meves=Només amb tasques meves
