#1946 Poder importar variables de tipus acció handler propi correctament
entre tipus d'expedients per estats

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -1318,6 +1318,7 @@ exportar.validacio.mapeigSistra.document=En la integració amb Sistra és necessar
 exportar.validacio.variable.agrupacio=La variable "{0}" necessita la agrupació "{1}"
 exportar.validacio.variable.registre=La variable de tipus registre "{0}" necessita la variable "{1}"
 exportar.validacio.variable.accio=La variable de tipus accio "{0}" necessita la definició de procés "{1}"
+exportar.validacio.variable.accioNull=La variable de tipus accio "{0}" necessita la acció "{1}"
 exportar.validacio.variable.seleccio.enumeracio.entorn=La variable de tipus selecció "{0}" necessita l''''enumeració "{1}" a nivell d''''entorn
 exportar.validacio.variable.seleccio.enumeracio.tipexp=La variable de tipus selecció "{0}" necessita l''''enumeració "{1}" a nivell de tipus d''''expedient
 exportar.validacio.variable.seleccio.domini.entorn=La variable de tipus selecció "{0}" necessita el domini "{1}" a nivell d''''entorn
